fix: change text color of copyright text to remove color contrast issue
- used a high contrast color for copyright text

--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -87,6 +87,7 @@
     p {
       text-align: center;
       padding-block: calc(var(--base-padding) * 0.5);
+      color: var(--tertiary);
     }
   }
 
